# conv-dedup

./: .gitignore  Cargo.toml  README.md  lsh_dedup.pyi  pyproject.toml  test_lsh_dedup.py
.github/workflows/: CI.yml
src/: dedup.rs  lib.rs  lsh.rs  main.rs
test/: test_lsh_dedup.py
test_resources/: texts.csv
